src/objects/mkto_si__GroupedWebActivityCache__c.object
<CustomObject>
    <fields>
        <fullName>mkto_si__AccountLinkName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AccountLinkName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__AccountLink__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AccountLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>mkto_si__City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__ContactLinkName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ContactLinkName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__ContactLink__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ContactLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>mkto_si__Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsAnonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAnonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__LastVisitDT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LastVisitDT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__PageViews__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PageViews</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__RowNum__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RowNum</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__SearchLinkName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SearchLinkName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__SearchLink__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SearchLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>mkto_si__State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__TotalCount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TotalCount</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__WPageLinkName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WPageLinkName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__WPageLink__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WPageLink</label>
        <type>Url</type>
    </fields>
    <label>GroupedWebActivityCache</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>GroupedWebActivityCache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GroupedWebActivityCache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>